--- a/Seminar3.ipynb
+++ b/Seminar3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "id": "784338ee",
    "metadata": {},
    "outputs": [
@@ -157,7 +157,7 @@
        "4      1803.60  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1707,7 +1707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "id": "3c7a329e",
    "metadata": {},
    "outputs": [
@@ -1775,7 +1775,7 @@
        "4         43       1999"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1788,20 +1788,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "id": "37cfb307",
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "clients_id = clients.set_index('laptop_id')\n",
+    "clients_id = cnlients.set_idex('laptop_id')\n",
     "\n",
     "clients_joined = clients_id.join(df, how = 'inner').copy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "id": "18810a9e",
    "metadata": {},
    "outputs": [
@@ -1832,16 +1832,14 @@
        "      <th>Product</th>\n",
        "      <th>TypeName</th>\n",
        "      <th>Inches</th>\n",
+       "      <th>ScreenResolution</th>\n",
        "      <th>Cpu</th>\n",
        "      <th>Ram</th>\n",
+       "      <th>Memory</th>\n",
        "      <th>Gpu</th>\n",
        "      <th>OpSys</th>\n",
        "      <th>Weight</th>\n",
        "      <th>Price_euros</th>\n",
-       "      <th>Cpu_productor</th>\n",
-       "      <th>Memory_Amount</th>\n",
-       "      <th>Memory_Type</th>\n",
-       "      <th>SSD</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1853,16 +1851,14 @@
        "      <td>ZenBook UX510UX-CN211T</td>\n",
        "      <td>Notebook</td>\n",
        "      <td>15.6</td>\n",
+       "      <td>Full HD 1920x1080</td>\n",
        "      <td>Intel Core i7 7500U 2.7GHz</td>\n",
        "      <td>8GB</td>\n",
+       "      <td>256GB SSD +  1TB HDD</td>\n",
        "      <td>Intel HD Graphics 620</td>\n",
        "      <td>Windows 10</td>\n",
-       "      <td>2.00</td>\n",
+       "      <td>2kg</td>\n",
        "      <td>1224.0</td>\n",
-       "      <td>Intel</td>\n",
-       "      <td>256</td>\n",
-       "      <td>SSD</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>398</th>\n",
@@ -1872,16 +1868,14 @@
        "      <td>Precision M5520</td>\n",
        "      <td>Workstation</td>\n",
        "      <td>15.6</td>\n",
+       "      <td>4K Ultra HD / Touchscreen 3840x2160</td>\n",
        "      <td>Intel Core i7 7700HQ 2.8GHz</td>\n",
        "      <td>8GB</td>\n",
+       "      <td>256GB SSD</td>\n",
        "      <td>Nvidia Quadro M1200</td>\n",
        "      <td>Windows 10</td>\n",
-       "      <td>1.78</td>\n",
+       "      <td>1.78kg</td>\n",
        "      <td>2712.0</td>\n",
-       "      <td>Intel</td>\n",
-       "      <td>256</td>\n",
-       "      <td>SSD</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>710</th>\n",
@@ -1891,16 +1885,14 @@
        "      <td>Legion Y520-15IKBN</td>\n",
        "      <td>Gaming</td>\n",
        "      <td>15.6</td>\n",
+       "      <td>IPS Panel Full HD 1920x1080</td>\n",
        "      <td>Intel Core i7 7700HQ 2.8GHz</td>\n",
        "      <td>8GB</td>\n",
+       "      <td>128GB SSD +  1TB HDD</td>\n",
        "      <td>Nvidia GeForce GTX 1050 Ti</td>\n",
        "      <td>Windows 10</td>\n",
-       "      <td>2.50</td>\n",
+       "      <td>2.5kg</td>\n",
        "      <td>1249.0</td>\n",
-       "      <td>Intel</td>\n",
-       "      <td>128</td>\n",
-       "      <td>SSD</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>120</th>\n",
@@ -1910,16 +1902,14 @@
        "      <td>Spin 3</td>\n",
        "      <td>Notebook</td>\n",
        "      <td>15.6</td>\n",
+       "      <td>IPS Panel Full HD / Touchscreen 1920x1080</td>\n",
        "      <td>Intel Core i3 7100U 2.4GHz</td>\n",
        "      <td>6GB</td>\n",
+       "      <td>1TB HDD</td>\n",
        "      <td>Intel HD Graphics 620</td>\n",
        "      <td>Windows 10</td>\n",
-       "      <td>2.10</td>\n",
+       "      <td>2.1kg</td>\n",
        "      <td>479.0</td>\n",
-       "      <td>Intel</td>\n",
-       "      <td>1024</td>\n",
-       "      <td>HDD</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1932,26 +1922,26 @@
        "710         67         718  Lenovo      Legion Y520-15IKBN       Gaming   \n",
        "120         33         123    Acer                  Spin 3     Notebook   \n",
        "\n",
-       "     Inches                          Cpu  Ram                         Gpu  \\\n",
-       "506    15.6   Intel Core i7 7500U 2.7GHz  8GB       Intel HD Graphics 620   \n",
-       "398    15.6  Intel Core i7 7700HQ 2.8GHz  8GB         Nvidia Quadro M1200   \n",
-       "710    15.6  Intel Core i7 7700HQ 2.8GHz  8GB  Nvidia GeForce GTX 1050 Ti   \n",
-       "120    15.6   Intel Core i3 7100U 2.4GHz  6GB       Intel HD Graphics 620   \n",
+       "     Inches                           ScreenResolution  \\\n",
+       "506    15.6                          Full HD 1920x1080   \n",
+       "398    15.6        4K Ultra HD / Touchscreen 3840x2160   \n",
+       "710    15.6                IPS Panel Full HD 1920x1080   \n",
+       "120    15.6  IPS Panel Full HD / Touchscreen 1920x1080   \n",
        "\n",
-       "          OpSys  Weight  Price_euros Cpu_productor  Memory_Amount Memory_Type  \\\n",
-       "506  Windows 10    2.00       1224.0         Intel            256         SSD   \n",
-       "398  Windows 10    1.78       2712.0         Intel            256         SSD   \n",
-       "710  Windows 10    2.50       1249.0         Intel            128         SSD   \n",
-       "120  Windows 10    2.10        479.0         Intel           1024         HDD   \n",
+       "                             Cpu  Ram                Memory  \\\n",
+       "506   Intel Core i7 7500U 2.7GHz  8GB  256GB SSD +  1TB HDD   \n",
+       "398  Intel Core i7 7700HQ 2.8GHz  8GB             256GB SSD   \n",
+       "710  Intel Core i7 7700HQ 2.8GHz  8GB  128GB SSD +  1TB HDD   \n",
+       "120   Intel Core i3 7100U 2.4GHz  6GB               1TB HDD   \n",
        "\n",
-       "     SSD  \n",
-       "506    1  \n",
-       "398    1  \n",
-       "710    1  \n",
-       "120    0  "
+       "                            Gpu       OpSys  Weight  Price_euros  \n",
+       "506       Intel HD Graphics 620  Windows 10     2kg       1224.0  \n",
+       "398         Nvidia Quadro M1200  Windows 10  1.78kg       2712.0  \n",
+       "710  Nvidia GeForce GTX 1050 Ti  Windows 10   2.5kg       1249.0  \n",
+       "120       Intel HD Graphics 620  Windows 10   2.1kg        479.0  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
